--- a/inc/style.css
+++ b/inc/style.css
@@ -28,8 +28,12 @@ ul {
 li {
 }
 
-.strippedRow:first-child {background:rgb(223, 236, 250)}
-.strippedRow:nth-child(2n+3) {background:rgb(223, 236, 250)}
+/*.strippedRow:first-child {background:rgb(223, 236, 250)}
+.strippedRow:nth-child(2n+3) {background:rgb(223, 236, 250)}*/
+
+.strippedRow{
+	border-bottom:1px solid #e9e9e9;
+}
 
 /*h1{
     font-size: 16pt;
@@ -521,13 +525,13 @@ h3{
     left: 0px;
     overflow: auto;
     background: #e5f2ff; /* Old browsers */
-    background: -moz-linear-gradient(left, #e5f2ff 99%, #828282 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(99%,#e5f2ff), color-stop(100%,#828282)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, #e5f2ff 99%,#828282 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left, #e5f2ff 99%,#828282 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(left, #e5f2ff 99%,#828282 100%); /* IE10+ */
-    background: linear-gradient(left, #e5f2ff 99%,#828282 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5f2ff', endColorstr='#828282',GradientType=1 ); /* IE6-9 */
+    background: -moz-linear-gradient(left, rgb(223, 236, 250) 99%, #828282 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(99%,#4f85bb), color-stop(100%,#828282)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgb(223, 236, 250) 99%,#828282 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgb(223, 236, 250) 99%,#828282 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgb(223, 236, 250) 99%,#828282 100%); /* IE10+ */
+    background: linear-gradient(left, rgb(223, 236, 250) 99%,#828282 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgb(223, 236, 250)', endColorstr='#828282',GradientType=1 ); /* IE6-9 */
 }
 
 .leftNav > ul > li{
@@ -538,10 +542,13 @@ h3{
     
 }
 .leftNav > ul > li:hover{
-    border: 1px solid #c9c9c9;
     
 }
 
+.leftNav > ul > li > a{
+	/*color: #FFFFFF;
+	font-color: #FFFFFF;*/
+}
 
 .frameRight{
     position: absolute;
@@ -1330,7 +1337,7 @@ h3{
         border-radius:6px;
         border:1px solid rgb(29,29,29);
         display:inline-block;
-        color: #797979;
+        color: #FFFFFF;
         font-size:12pt;
         font-weight:100;
         padding:6px 5px 4px;
@@ -1774,35 +1781,8 @@ del.bar{
 }
 
 .signatureGradient{
-	background: #5d83a0; /* Old browsers */
-	background: -moz-linear-gradient(top, #5d83a0 0%, #5a7089 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5d83a0), color-stop(100%,#5a7089)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #5d83a0 0%,#5a7089 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #5d83a0 0%,#5a7089 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #5d83a0 0%,#5a7089 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #5d83a0 0%,#5a7089 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5d83a0', endColorstr='#5a7089',GradientType=0 ); /* IE6-9 */
 	
-	background: #93acbc; /* Old browsers */
-	background: -moz-linear-gradient(top, #93acbc 0%, #8c97a3 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#93acbc), color-stop(100%,#8c97a3)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #93acbc 0%,#8c97a3 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #93acbc 0%,#8c97a3 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #93acbc 0%,#8c97a3 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #93acbc 0%,#8c97a3 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93acbc', endColorstr='#8c97a3',GradientType=0 ); /* IE6-9 */
-
-        color:#c9c9c9;
-    
-    
-        background: #75a6b5; /* Old browsers */
-	background: -moz-linear-gradient(top, #75a6b5 0%, #3f7577 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#75a6b5), color-stop(100%,#3f7577)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #75a6b5 0%,#3f7577 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #75a6b5 0%,#3f7577 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #75a6b5 0%,#3f7577 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #75a6b5 0%,#3f7577 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75a6b5', endColorstr='#3f7577',GradientType=0 ); /* IE6-9 */
+	background: #FFFFFF;
     
 }
 
