--- a/inc/style.css
+++ b/inc/style.css
@@ -396,9 +396,24 @@ h3{
     }
     
     .jqPopUp header{
+    	position:absolute;
+    	top:0px;
+    	left:0px;
+    	right:0px;
+    	height:30px;
         text-align: center;
         color: #FFFFFF;
-        margin-bottom: 15px;
+        line-height:32px;
+        font-size: 14pt;
+    }
+    .jqPopUp footer{
+    	position:absolute;
+    	left:0px;
+    	right:0px;
+		height: 40px;
+		bottom: 0px;
+        text-align: center;
+        color: #FFFFFF;
         font-size: 14pt;
     }
 
@@ -424,6 +439,7 @@ h3{
         top: 10px;
         right: 10px;
         color: #FFF;
+		z-index: 1;
     }
     
     
@@ -433,7 +449,12 @@ h3{
 
 
 .jqContent{
-    overflow: auto;
+	overflow: auto;
+	position: absolute;
+	top: 40px;
+	right:0px;
+	bottom: 40px;
+	left: 15px;
 }
 .jqMailPopUp {
     position: absolute;
@@ -650,7 +671,8 @@ h3{
 }
 
 #feed {
-    
+    min-width: 180px;
+    min-height: 200px;
 }
     
 #feedheader {
@@ -702,16 +724,23 @@ h3{
 
 #feedFrame{
     position: absolute;
-    top: 61;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    top: 61px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
     overflow: auto;
     background-color: #FFFFFF;
     
     
 }
 
+#feedInput{
+	width: 86%;
+	margin-left: 7%;
+	margin-bottom: 0px; 
+	height: 20px;
+	resize: none;
+}
 
 #feedTable { 
     overflow: none;
@@ -810,6 +839,69 @@ h3{
     margin-left: 15%;
 }
 
+
+
+            .uffViewerMain{
+                position: absolute;
+                top: 61px;
+                right: 150px;
+                bottom: 0px;
+                left: 0px;
+                overflow: auto;
+            }
+            
+            .uffViewerMain ol{
+                list-style-type:decimal;
+            }
+            
+            .uffViewerMain li{
+                height: auto;
+            }
+
+            .uffViewerNav{
+                position: absolute;
+                top: 61px;
+                right: 0px;
+                bottom: 0px;
+                width: 150px;
+                background: #FFFFFF;
+                border-left: 1px solid #c9c9c9;
+            }
+            
+            .uffDocumentSettings{
+                position: absolute;
+                margin-top: 40px;
+                background: #E5E5E5;
+                height: 24px;
+                padding: 3px;
+                border-bottom: 1px solid #c9c9c9;
+                border-right: 1px solid #c9c9c9;
+            }
+            
+            .cke_editor_1{
+                position: absolute;
+                top: 0px;
+                right: 150px;
+                bottom: 0px;
+            }
+
+	.iframeFrame{
+		position: absolute;
+		top: 58px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+	}
+
+	.iframeFrame iframe{
+		position: absolute;
+		top: 0px;
+		bottom: 0px;
+		left: 0px;
+		right: 0px;
+		width: 100%;
+		height: 100%;
+	}
 #chat {
     top: auto;
     left: 45%;
@@ -1179,10 +1271,10 @@ h3{
         
         #searchField{
             position: absolute;
-            right: 15px;
+            right: 4px;
             bottom: -4.5px;
             width: 180px;
-            height: 30px;
+            height: 20px;
             font-size: 12pt;
             -webkit-border-radius: 22px;
             -moz-border-radius: 22px;
