--- a/modules/chat/chat.css
+++ b/modules/chat/chat.css
@@ -1,4 +1,4 @@
-
+/*
 
 ul {
     list-style-type: none;
@@ -79,4 +79,4 @@ padding-left: 0px;
     margin-right: -10px;
     padding: 1%;
     font-size: 20px;
-}
+}*/
