--- a/inc/css/guest.css
+++ b/inc/css/guest.css
@@ -90,6 +90,7 @@
 		-webkit-border-radius: 0px;
 		-moz-border-radius: 0px;
 		border-radius: 0px;
+		border-top: 0;
     }
     
     #registration #passwordRepeat{
@@ -100,6 +101,7 @@
 		border-top-left-radius: 0px;
 		border-top-right-radius: 0px;
 		border-top: none;
+		margin-top: -1px;
     }
 /*registration end*/
     
@@ -157,6 +159,27 @@
 
 .text-shadow{
    		text-shadow:0 0 1px #fff, 2px 2px 3px #fff, -3px -3px 5px #fff, -3px 3px 5px #fff, 3px -3px 5px #fff;
+}
+
+#guestInfoBox{
+	position: absolute;
+	top:3px;
+	left:3px;
+	width:250px;
+	height:125px;
+}
+
+#guestInfoBox a{
+	color: #FFFFFF;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+}
+
+#guestInfoBox h1, #guestInfoBox h2, #guestInfoBox h3, #guestInfoBox h4{
+	margin: 0;
+	margin-top: 5px;
+	line-height: 30px;
 }
 
 .margin{
