--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -375,11 +375,11 @@ h3{
 
 /* hehe */
 .transparency{
-    	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
+    	/*-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
 	filter: alpha(opacity=85);
 	-moz-opacity:0.85;
 	-khtml-opacity: 0.85;
-	opacity: 0.85;
+	opacity: 0.85;*/
 }
 
 
@@ -469,7 +469,7 @@ h3{
         color: #FFFFFF;
     }
     
-    .jqPopUp header{
+    .jqPopUp > header{
     	position:absolute;
     	top:0px;
     	left:0px;
@@ -480,7 +480,7 @@ h3{
         line-height:32px;
         font-size: 14pt;
     }
-    .jqPopUp footer{
+    .jqPopUp > footer{
     	position:absolute;
 		left: 10px;
 		right: 10px;
@@ -529,6 +529,7 @@ h3{
 	right:15px;
 	bottom: 40px;
 	left: 15px;
+	padding-bottom: 15px;
 }
 .jqMailPopUp {
     position: absolute;
@@ -1605,10 +1606,6 @@ color:#FFFFFF;
                     margin-top: -1.5em;
                 }
 
-                .listContainer .list {
-                    margin-top: 2em;
-                }
-
                 .list:empty,
                 .list:empty + header {
                     display: none;
@@ -2289,7 +2286,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	.dashBox{
 		color: #474747;
 		font-size: 15pt;
-		width: 230px;
+		width: 233px;
 		height: 180px;
 		border-radius: 1px;
 		background:rgba(255,255,255,0.9);
@@ -2300,7 +2297,7 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
 	
 	.dashBox .content{
 		overflow: auto;
-		max-height: 130px;
+		max-height: 141px;
 	}
 	
 	.dashBox header{
@@ -2409,3 +2406,81 @@ Released under the MIT License <http://www.opensource.org/licenses/mit-license.p
                 #dashBoard .appList > li:hover{
                     background: #303030; /* Old browsers */
                 }
+                .privacySettings{
+                	background: #3E3E3E;
+                	border: 1px solid #c9c9c9;
+                	color: #E2E2E2;
+                }
+                
+				.privacySettings h1, .privacySettings h2, .privacySettings h3{
+					margin: 0;
+					line-height:15px;
+				}
+				
+				.privacySettings header{
+					font-size:22px;
+					line-height: 22px;
+					padding: 5px;
+					padding-bottom: 0px;
+	    			border-bottom:1px solid #3a3a3a;
+					background: -moz-linear-gradient(top, rgba(38,38,38,1) 0%, rgba(40,40,40,1) 49%, rgba(40,40,40,1) 100%); /* FF3.6+ */
+					background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(38,38,38,1)), color-stop(49%,rgba(40,40,40,1)), color-stop(100%,rgba(40,40,40,1))); /* Chrome,Safari4+ */
+					background: -webkit-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* Chrome10+,Safari5.1+ */
+					background: -o-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* Opera 11.10+ */
+					background: -ms-linear-gradient(top, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* IE10+ */
+					background: linear-gradient(to bottom, rgba(38,38,38,1) 0%,rgba(40,40,40,1) 49%,rgba(40,40,40,1) 100%); /* W3C */
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#262626', endColorstr='#282828',GradientType=0 ); /* IE6-9 */
+				}
+				
+				.privacySettings ul{
+				}
+				
+ 				.privacySettings li{
+ 					margin-top: 5px;
+ 					padding: 5px;
+ 					padding-left: 15px;
+ 					border-top: 1px solid #313131;
+ 					clear:both;
+ 					
+ 				}
+ 				.privacySettings li:first-of-type{
+ 					margin-top: 0px;
+ 					
+ 				}
+ 				
+ 				.privacySettings input[type=checkbox]{
+ 					margin: -5px 3px 0 -13px;
+ 				}
+ 				
+ 				.privacySettings .sub{
+ 					margin-left: 25px;
+ 					border-top: none;
+ 					display:none;
+ 				}
+ 				
+ 				.privacySettings .sub > div{
+ 					float:left;
+ 					margin-left: 20px;
+ 				}
+ 				.privacySettings .sub > div:first-of-type{
+ 					margin-left: 0;
+ 				}
+ 				
+ 				.privacySettings .groupList li{
+ 					clear: both;
+ 					padding-left: 5px;
+ 				}
+ 				
+ 				.privacySettings .groupList li > div:first-of-type{
+ 					margin-left: 0;
+ 					width: 120px; 
+ 				    overflow-x: hidden;
+ 				}
+ 				
+ 				.privacySettings .groupList li > div{
+ 					float:left;
+ 					margin-left: 20px;
+ 				}
+ 				.privacySettings .groupList li > div:last-of-type{
+ 					
+ 				}
